test/org/midica/testfiles/failing/eff-func-param-too-high-2.midica
INCLUDE inc/instruments.midica


0: balance.double.line(1,8192)
